[package]
name = "chat_app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"]}
axum-server = { version = "0.8.0", features = [] }
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"]}
uuid = { version = "1.21.0", features = ["serde"]}
